--- a/kNN/kNN.ipynb
+++ b/kNN/kNN.ipynb
@@ -16,15 +16,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
     "#imports\n",
     "import pandas as pd #pandas for reading csv file\n",
-    "import numpy as np  #numpy for vectorising\n",
-    "\n"
+    "import numpy as np  #numpy for vectorising"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def read_MNIST(file_path):\n",
+    "    df = pd.read_csv(file_path, header = None)\n",
+    "    Y = np.array(df[0])\n",
+    "    X = np.array(df.iloc[:,1:])\n",
+    "    return X, Y\n",
+    "\n",
+    "def distance(A, B, metric = \"euclidean\"):\n",
+    "    if metric == \"euclidean\":\n",
+    "        return np.linalg.norm(A-B)\n",
+    "        \n",
+    "def neighbors(X, k, metric = \"euclidean\"):\n",
+    "    D = []       #matrix of distances\n",
+    "    n = len(X)   #number of elements\n",
+    "    for i in X:\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X, Y = read_MNIST(\"data/MNIST_train_small.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2867.6880932207396"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
   }
  ],
  "metadata": {
