--- a/kNN/kNN.ipynb
+++ b/kNN/kNN.ipynb
@@ -41,10 +41,13 @@
     "    if metric == \"euclidean\":\n",
     "        return np.linalg.norm(A-B)\n",
     "        \n",
-    "def neighbors(X, k, metric = \"euclidean\"):\n",
-    "    D = []       #matrix of distances\n",
-    "    n = len(X)   #number of elements\n",
-    "    for i in X:\n",
+    "def kNN(X, Y, k, metric = \"euclidean\"):\n",
+    "    n = len(X)                #number of elements\n",
+    "    D = np.zeros((n,n))       #matrix of distances\n",
+    "    for i in range(0,n):\n",
+    "        for j in range(i,n):\n",
+    "            D[i,j] = distance() \n",
+    "            \n",
     "    "
    ]
   },
