--- a/kNN/kNN.ipynb
+++ b/kNN/kNN.ipynb
@@ -16,18 +16,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "#imports\n",
     "import pandas as pd #pandas for reading csv file\n",
-    "import numpy as np  #numpy for vectorising"
+    "import numpy as np  #numpy for vectorising\n",
+    "from random import randrange"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +70,103 @@
     "            D[i, j] = distance(X_test[i], X_train[j], metric)\n",
     "        NN[i] = D[i].argsort()[1:k+1]\n",
     "    pred = vote(NN, Y_train)\n",
-    "    return pred"
+    "    return pred\n",
+    "\n",
+    "def accuracy(Y_pred, Y_true):\n",
+    "    return np.mean(1 - np.equal(Y_true, Y_pred, dtype=int))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Cross-validation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def data_split(dataset, folds=3):\n",
+    "    dataset_split = np.array([])\n",
+    "    dataset_copy = np.array(dataset)\n",
+    "    fold_size = int(len(dataset) / folds)\n",
+    "    for i in range(folds):\n",
+    "        fold = np.array([])\n",
+    "        while len(fold) < fold_size:\n",
+    "            index = randrange(len(dataset_copy))\n",
+    "            fold = np.concatenate((fold,np.delete(dataset_copy, index, None)))\n",
+    "        dataset_split = np.concatenate((dataset_split, fold))\n",
+    "    return dataset_split"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X, Y = read_MNIST(\"data/MNIST_train_small.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8997"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(cross_validation(Y))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3000"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(Y)"
    ]
   },
   {
