LOOCV for the big dataset code snippet added (running now)

--- a/kNN/kNN_Ilya.ipynb
+++ b/kNN/kNN_Ilya.ipynb
@@ -905,24 +905,35 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "  0%|          | 0/20 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Calculating distances. This could take some time ...\n"
+     ]
+    }
+   ],
    "source": [
-    "results_test = []\n",
-    "results_train = []\n",
-    "X_train, Y_train = read_MNIST(\"data/MNIST_train_small.csv\")\n",
-    "X_test, Y_test = read_MNIST(\"data/MNIST_test_small.csv\")\n",
+    "LOOCV_results_full = []\n",
+    "X_train, Y_train = read_MNIST(\"../../MNIST_train.csv\")\n",
     "classifier = kNN(X_train, Y_train)\n",
     "\n",
-    "for k in tqdm(range(1,21)):\n",
-    "    Y_pred_test = classifier.predict(X_test, k)\n",
-    "    results_test.append(accuracy(Y_pred_test, Y_test))\n",
-    "    \n",
-    "    Y_pred_train = classifier.predict(X_train, k)\n",
-    "    results_train.append(accuracy(Y_pred_train, Y_train))\n",
+    "for k in tqdm(range(20,0,-1)):\n",
+    "    Y_pred = classifier.LOOCV_big(k)\n",
+    "    LOOCV_results_full.append(accuracy(Y_pred, Y_train))\n",
     "\n",
-    "ax = sns.lineplot(x=[i for i in range(1,21)], y=results_test, label = 'Test accuracy')\n",
-    "ax = sns.lineplot(x=[i for i in range(1,21)], y=results_train, label = 'Train accuracy')\n",
-    "ax.yaxis.set_major_locator(MaxNLocator(integer=True))"
+    "ax = sns.lineplot(x=[i for i in range(1,21)], y=LOOCV_results_full)\n",
+    "print(LOOCV_results_full)"
    ]
   }
  ],
