Changed knn main

--- a/kNN/kNN-parallel.ipynb
+++ b/kNN/kNN-parallel.ipynb
@@ -558,7 +558,7 @@
    "outputs": [],
    "source": [
     "LOOCV_big_results = []\n",
-    "X_train, Y_train = read_MNIST(\"../../MNIST_train.csv\")\n",
+    "X_train, Y_train = read_MNIST(\"data/MNIST_train.csv\")\n",
     "classifier = kNN(X_train, Y_train)\n",
     "\n",
     "for k in tqdm(range(20,0,-1)):\n",
