--- a/kNN/kNN.ipynb
+++ b/kNN/kNN.ipynb
@@ -1841,41 +1841,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[0.03493333333333333,\n",
-       " 0.034883333333333336,\n",
-       " 0.03358333333333333,\n",
-       " 0.033883333333333335,\n",
-       " 0.0324,\n",
-       " 0.032916666666666664,\n",
-       " 0.0315,\n",
-       " 0.03161666666666667,\n",
-       " 0.030516666666666668,\n",
-       " 0.030483333333333335,\n",
-       " 0.028683333333333335,\n",
-       " 0.028883333333333334,\n",
-       " 0.027216666666666667,\n",
-       " 0.0275,\n",
-       " 0.02555,\n",
-       " 0.025983333333333334,\n",
-       " 0.02425,\n",
-       " 0.0251,\n",
+       "[0.026283333333333332,\n",
        " 0.026283333333333332,\n",
-       " 0.026283333333333332]"
+       " 0.0251,\n",
+       " 0.02425,\n",
+       " 0.025983333333333334,\n",
+       " 0.02555,\n",
+       " 0.0275,\n",
+       " 0.027216666666666667,\n",
+       " 0.028883333333333334,\n",
+       " 0.028683333333333335,\n",
+       " 0.030483333333333335,\n",
+       " 0.030516666666666668,\n",
+       " 0.03161666666666667,\n",
+       " 0.0315,\n",
+       " 0.032916666666666664,\n",
+       " 0.0324,\n",
+       " 0.033883333333333335,\n",
+       " 0.03358333333333333,\n",
+       " 0.034883333333333336,\n",
+       " 0.03493333333333333]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "LOOCV_big_results"
+    "LOOCV_big_results[::-1] # от 1 до 20"
    ]
   }
  ],
