--- a/kNN/kNN.ipynb
+++ b/kNN/kNN.ipynb
@@ -73,6 +73,7 @@
     "        self.length = len(X_train)\n",
     "        self.p = p\n",
     "        self.inner_distances_calculated = False\n",
+    "        self.test_distances_calculated = False\n",
     "        \n",
     "    def set_minkovsky_parameter(self, p):\n",
     "        self.p = p\n",
@@ -97,15 +98,17 @@
     "        return self.vote(NN)\n",
     "    \n",
     "    def predict_big(self, X_test, k, partition = 500):\n",
-    "        X_test = X_test/255.\n",
-    "        n_test = len(X_test)\n",
-    "        NN = np.zeros((n_test,k)).astype(int)\n",
-    "        for i in tqdm(range(math.trunc(n_test/partition))):\n",
-    "            D = pairwise_distances(self.X_test[partition*i:partition*(i+1)], self.X_train,n_jobs = -1, metric = \"minkowski\",\n",
-    "                                       p = self.p)\n",
-    "            for j in range(partition):\n",
-    "                NN[partition*i+j] = D[i].argsort()[1:k+1]\n",
-    "        return self.vote(NN)\n",
+    "        if not self.test_distances_calculated or self.NN_test.shape[1]<k:\n",
+    "            X_test = X_test/255.\n",
+    "            n_test = len(X_test)\n",
+    "            self.NN_test = np.zeros((n_test,k)).astype(int)\n",
+    "            for i in tqdm(range(math.trunc(n_test/partition))):\n",
+    "                D = pairwise_distances(X_test[partition*i:partition*(i+1)], self.X_train,n_jobs = -1, metric = \"minkowski\",\n",
+    "                                           p = self.p)\n",
+    "                for j in range(partition):\n",
+    "                    self.NN_test[partition*i+j] = D[j].argsort()[:k]\n",
+    "            self.test_distances_calculated = True\n",
+    "        return self.vote(self.NN_test[:,:k])\n",
     "    \n",
     "    def LOOCV(self, k):\n",
     "        if not self.inner_distances_calculated:\n",
@@ -130,7 +133,49 @@
     "                    self.inner_NN.append(D[i].argsort()[1:k+1])\n",
     "            self.inner_NN = np.array(self.inner_NN)\n",
     "            self.inner_distances_calculated = True\n",
-    "        return self.vote(self.inner_NN[:,:k])"
+    "        return self.vote(self.inner_NN[:,:k])\n",
+    "    \n",
+    "    def LOOCV_cosine(self, k):\n",
+    "        if not self.inner_distances_calculated:\n",
+    "            print(\"Calculating distances. This could take some time ...\")\n",
+    "            X_train_cur = X_train\n",
+    "            self.inner_distances = cdist(X_train_cur, X_train_cur, metric = \"cosine\");\n",
+    "            self.inner_NN = np.zeros((self.length,self.length)).astype(int)\n",
+    "            for i in range(0,self.length):\n",
+    "                self.inner_NN[i] = self.inner_distances[i].argsort()\n",
+    "            self.inner_distances_calculated = True\n",
+    "\n",
+    "        return self.vote(self.inner_NN[:,1:k+1])\n",
+    "    \n",
+    "    def LOOCV_standard(self, k):\n",
+    "        if not self.inner_distances_calculated:\n",
+    "            print(\"Calculating distances. This could take some time ...\")\n",
+    "            X_train_cur = X_train[:,np.logical_not(np.all(X_train == X_train[0,:], axis = 0))]\n",
+    "            X_train_cur = (X_train_cur - np.mean(X_train_cur, axis = 0))/np.var(X_train_cur, axis = 0)\n",
+    "            self.inner_distances = pairwise_distances(X_train_cur, X_train_cur, n_jobs = -1, metric = \"minkowski\",\n",
+    "                                       p = self.p);\n",
+    "            print(self.inner_distances)\n",
+    "            print(np.var(X_train_cur, axis = 0))\n",
+    "            self.inner_NN = np.zeros((self.length,self.length)).astype(int)\n",
+    "            for i in range(0,self.length):\n",
+    "                self.inner_NN[i] = self.inner_distances[i].argsort()\n",
+    "            self.inner_distances_calculated = True\n",
+    "\n",
+    "        return self.vote(self.inner_NN[:,1:k+1])\n",
+    "    \n",
+    "    def LOOCV_discr(self, k):\n",
+    "        if not self.inner_distances_calculated:\n",
+    "            print(\"Calculating distances. This could take some time ...\")\n",
+    "            self.X_train = np.around(self.X_train+0.3)\n",
+    "            self.inner_distances = pairwise_distances(self.X_train, self.X_train, n_jobs = -1, metric = \"minkowski\",\n",
+    "                                       p = self.p);\n",
+    "            print(self.inner_distances)\n",
+    "            print(X_train)\n",
+    "            self.inner_NN = np.zeros((self.length,self.length)).astype(int)\n",
+    "            for i in range(0,self.length):\n",
+    "                self.inner_NN[i] = self.inner_distances[i].argsort()\n",
+    "            self.inner_distances_calculated = True\n",
+    "        return self.vote(self.inner_NN[:,1:k+1])"
    ]
   },
   {
@@ -562,6 +607,75 @@
     "ax.set_xticklabels(range(1,21))\n",
     "ax.set_yticklabels(range(1,16))\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### d)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "LOOCV_cosine_results = []\n",
+    "X_train, Y_train = read_MNIST(\"data/MNIST_train_small.csv\")\n",
+    "classifier_cosine = kNN(X_train, Y_train)\n",
+    "\n",
+    "for k in tqdm(range(1,21)):\n",
+    "    Y_pred = classifier_cosine.LOOCV_cosine(k)\n",
+    "    LOOCV_cosine_results.append(accuracy(Y_pred, Y_train))\n",
+    "\n",
+    "fig, ax = plt.subplots(figsize=(12,7))\n",
+    "ax = sns.lineplot(x=[i for i in range(1,21)], y=LOOCV_cosine_results)\n",
+    "plt.xticks([i for i in range(1,21)], fontsize = 16)\n",
+    "plt.yticks(fontsize = 16)\n",
+    "plt.xlabel('k', fontsize = 20)\n",
+    "plt.ylabel('Loss', fontsize =20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "LOOCV_st_results = []\n",
+    "X_train, Y_train = read_MNIST(\"data/MNIST_train_small.csv\")\n",
+    "classifier_st = kNN(X_train, Y_train)\n",
+    "\n",
+    "for k in tqdm(range(1,21)):\n",
+    "    Y_pred = classifier_st.LOOCV_standard(k)\n",
+    "    LOOCV_st_results.append(accuracy(Y_pred, Y_train))\n",
+    "\n",
+    "ax = sns.lineplot(x=[i for i in range(1,21)], y=LOOCV_st_results)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "LOOCV_discr_results = []\n",
+    "X_train, Y_train = read_MNIST(\"data/MNIST_train_small.csv\")\n",
+    "classifier = kNN(X_train, Y_train)\n",
+    "\n",
+    "for k in tqdm(range(1,21)):\n",
+    "    Y_pred = classifier.LOOCV_discr(k)\n",
+    "    print(Y_pred)\n",
+    "    LOOCV_discr_results.append(accuracy(Y_pred, Y_train))\n",
+    "    \n",
+    "ax = sns.lineplot(x=[i for i in range(1,21)], y=LOOCV_discr_results)\n",
+    "plt.xticks([i for i in range(1,21)], fontsize = 16)\n",
+    "plt.yticks(fontsize = 16)\n",
+    "plt.xlabel('k', fontsize = 20)\n",
+    "plt.ylabel('Loss', fontsize =20)\n",
+    "print(LOOCV_mah_results)"
    ]
   },
   {
@@ -1877,6 +1991,122 @@
    "source": [
     "LOOCV_big_results[::-1] # от 1 до 20"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, ax = plt.subplots(figsize=(12,7))\n",
+    "results_test_big = []\n",
+    "X_train, Y_train = read_MNIST(\"../../MNIST_train.csv\")\n",
+    "X_test, Y_test = read_MNIST(\"../../MNIST_test.csv\")\n",
+    "classifier_big = kNN(X_train, Y_train)\n",
+    "\n",
+    "for k in tqdm(range(20,0,-1)):\n",
+    "    Y_pred_test = classifier_big.predict_big(X_test, k)\n",
+    "    results_test_big.append(accuracy(Y_pred_test, Y_test))\n",
+    "    \n",
+    "ax = sns.lineplot(x=[i for i in range(1,21)], y=results_test_big[::-1], label = 'Test empirical risk')\n",
+    "plt.xlabel('k', fontsize = 20)\n",
+    "plt.xticks([i for i in range(1,21)], fontsize = 16)\n",
+    "plt.yticks(fontsize = 16)\n",
+    "plt.ylabel('Loss', fontsize = 20)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### g)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.decomposition import PCA\n",
+    "pca = PCA(0.95).fit(X_train)\n",
+    "plt.plot(np.cumsum(pca.explained_variance_ratio_))\n",
+    "plt.xlabel('number of components')\n",
+    "plt.ylabel('cumulative explained variance');"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pca = PCA(n_components=140)  # project from 784 to 100 dimensions\n",
+    "Xproj = pca.fit_transform(X_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(X_train.shape)\n",
+    "print(Xproj.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "approximation = pca.inverse_transform(Xproj)\n",
+    "plt.figure(figsize=(8,4));\n",
+    "\n",
+    "# Original Image\n",
+    "plt.subplot(1, 2, 1);\n",
+    "plt.imshow(X_train[1].reshape(28,28),\n",
+    "              cmap = plt.cm.gray, interpolation='nearest',\n",
+    "              clim=(0, 255));\n",
+    "plt.xlabel('784 components', fontsize = 14)\n",
+    "plt.title('Original Image', fontsize = 20);\n",
+    "\n",
+    "# 140 principal components\n",
+    "plt.subplot(1, 2, 2);\n",
+    "plt.imshow(approximation[1].reshape(28, 28),\n",
+    "              cmap = plt.cm.gray, interpolation='nearest',\n",
+    "              clim=(0, 255));\n",
+    "plt.xlabel('140 components', fontsize = 14)\n",
+    "plt.title('95% of Explained Variance', fontsize = 20);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "LOOCV_PCA_results = []\n",
+    "classifier_PCA = kNN(Xproj, Y_train)\n",
+    "for k in tqdm(range(20,0,-1)):\n",
+    "    Y_pred = classifier_PCA.LOOCV_big(k)\n",
+    "    LOOCV_PCA_results.append(accuracy(Y_pred, Y_train))\n",
+    "    \n",
+    "fig, ax = plt.subplots(figsize=(12,7))\n",
+    "ax = sns.lineplot(x=[i for i in range(1,21)], y=LOOCV_PCA_results[::-1])\n",
+    "plt.xticks([i for i in range(1,21)], fontsize = 16)\n",
+    "plt.yticks(fontsize = 16)\n",
+    "plt.xlabel('k', fontsize = 20)\n",
+    "plt.ylabel('Loss', fontsize = 20)"
+   ]
   }
  ],
  "metadata": {
@@ -1895,7 +2125,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
