--- a/kNN/kNN_with_predict_big_and_pca_code.ipynb
+++ b/kNN/kNN_with_predict_big_and_pca_code.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,6 +25,7 @@
     "import numpy as np  #numpy for vectorising\n",
     "import seaborn as sns\n",
     "from scipy.spatial import distance_matrix\n",
+    "from scipy.spatial.distance import cdist\n",
     "from tqdm import tqdm\n",
     "import math\n",
     "from matplotlib.ticker import MaxNLocator\n",
@@ -2955,13 +2956,7 @@
       "\n",
       "\n",
       "\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "\n",
       " 12%|█▏        | 143/1200 [15:26<1:57:01,  6.64s/it]\n",
       "\n",
       "\n",
@@ -4659,13 +4654,7 @@
       "\n",
       "\n",
       "\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "\n",
       " 35%|███▌      | 425/1200 [46:42<1:29:10,  6.90s/it]\n",
       "\n",
       "\n",
@@ -6339,13 +6328,7 @@
       "\n",
       "\n",
       "\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "\n",
       " 59%|█████▊    | 703/1200 [1:17:47<51:57,  6.27s/it]\n",
       "\n",
       "\n",
@@ -8043,13 +8026,7 @@
       "\n",
       "\n",
       "\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "\n",
       " 82%|████████▏ | 985/1200 [1:48:47<23:33,  6.58s/it]\n",
       "\n",
       "\n",
